# qsi-tk

./: .gitignore  .pylintrc  LICENCE  MANIFEST.in  README.md  package_arch.xlsx  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  ci-cd.yml.bak
notebook/: qsi-tk - aug.ipynb  qsi-tk regression.ipynb  qsi.fs - metabolomics.ipynb  raman_herb.json  regression CO.ipynb  regression-CO.ipynb
notebook/.ipynb_checkpoints/: qsi.fs - metabolomics-checkpoint.ipynb
qsi/: __init__.py  clustering.py  cs.py  io.py  kernel.py  pipeline.py  regress.py
qsi/cla/: __init__.py  ensemble.py  metrics.py
qsi/data/: 7044X_RAMAN desc.txt  704b_IMS desc.txt  7143X_UV desc.txt  7341 desc.txt  7341.csv  7341_C1 desc.txt  7341_C2.csv  7344 desc.txt  7344_Y5Y26 desc.txt  7344_Y5Y26.csv  7345 desc.txt  7346 desc.txt  7346.csv  734b desc.txt  7545 SALT desc.txt  7545 desc.txt  7545.csv  754a_C2S_Beimu desc.txt  754b desc.txt  754b.csv  754b_C2S_Shihu desc.txt  754b_C2S_Shihu.csv  754b_C2S_Shihu.txt  7635 desc.txt  7635.csv  7741.csv  7741_P.csv  7741_rice_cereal_rm desc.txt  7744 desc.txt  7745 desc.txt  7746 desc.txt  7746.pkl  7747 desc.txt  7747.pkl  7a40 desc.txt  7a40.csv  7a41 desc.txt  7a41.csv  7a41_hplc desc.txt  7a41_hplc.xlsx  (+41 more)
qsi/dr/: __init__.py  mf.py
qsi/fs/: __init__.py  aenet.py  alasso.py  fsse.py  glasso.py  group_lasso.py  metrics.py  mt.py
qsi/gui/: chaihu.py  chaihu_models.py
qsi/io/: __init__.py  audio.py  image.py  importer.py  pre.py
qsi/mh/: __init__.py  pso.py
qsi/qsi_tk.egg-info/: PKG-INFO
qsi/vis/: __init__.py  (+8 more)
qsi_tk.egg-info/: PKG-INFO  SOURCES.txt
(+41 files in other folders)
