[metadata]
name = qsi
version = 0.0.1
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = Data science toolkit from Quality-safety research Institute (QI)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhangys11/qsi
project_urls =
    Bug Tracker = https://github.com/zhangys11/qsi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scikit-learn
    matplotlib
    numpy
    PyWavelets
    statsmodels
    pyNNRW
    pyCLAMs
    pyDRMetrics
    cs1

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.csv